# qtwidgetapp

./: .gitignore  CMakeLists.txt  conanfile.py
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
